# OpenTelegramBot

./: .gitmodules  CMakeLists.txt
project/: Application.cpp  Application.h  Startup.cpp
